--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           context.fillStyle = '#00FF00';
           context.fill();
       };
-      mazeImg.src = "/image/maze.gif";
+      mazeImg.src = "./image/maze.gif";
   }
   function drawRectangle(x, y, style) {
       makeWhite(currRectX, currRectY, 15, 15);
