--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   
 </head>
 <body>
+  <p style="Color:red;font-size:20px;">Please! Play with PC/Gaming Remote</p>
   <canvas width="616" height="556" id="mazecanvas">
     Can't load the maze game, because your browser doesn't support HTML5.</canvas>
     <noscript>JavaScript is not enabled. To play the game, you should enable it.</noscript>
